--- a/Tags.html
+++ b/Tags.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <style>
@@ -19,5 +24,20 @@
      <span style="color:aquamarine"> this</span> word isn't.</p>
      
     <h2><span style="color:cadetblue">MRU-HAHAHAHA</span></h2>
+
+    <table>
+        <tr>
+            <th>This is a table maybe? </th>
+            <th>I honestly can't tell from here</th>
+        </tr>
+        <tr>
+            <td>Something</td>
+            <td>Something different</td>
+        </tr>
+        <tr>
+            <td>Oh it is</td>
+            <td>Haha I rule</td>
+        </tr>
+    </table>
 </body>
 </html>
