--- a/Tags.html
+++ b/Tags.html
@@ -39,5 +39,12 @@
             <td>Haha I rule</td>
         </tr>
     </table>
+
+    <p>Sure dude, whatever <i>that</i> means. </p>
+    <p><i>ItalicsItalicsItalicsItalicsItalicsItalicsItalicsItalics
+        ItalicsItalicsItalicsItalicsItalicsItalicsItalicsItalics
+        ItalicsItalicsItalicsItalicsItalicsItalicsItalicsItalics
+        ItalicsItalicsItalicsItalicsItalicsItalicsItalicsSorryThisSucks
+    </i></p>
 </body>
 </html>
