--- a/Tags.html
+++ b/Tags.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <style>
-        h1 {color:aquamarine}
+        h1 {color:teal}
         p {color:orangered}
     </style>
     <h1>The following text is completely, utterly, blue. Do not question
@@ -16,7 +16,7 @@
     <p>Blue</p>
 
     <p>These words are RED, but
-     <span style="color:aquamarine"> this</span> word isn't.</p>
+     <span style="color:rgb(0, 105, 186)"> this</span> word isn't.</p>
      
     <h2><span style="color:cadetblue">MRU-HAHAHAHA</span></h2>
 </body>
